--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,38 +6,47 @@ description: >
 version: 1.4.2+11
 
 environment:
-  sdk: ">=2.2.2 <3.0.0"
+  sdk: ">=2.6.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
-  built_collection: ^4.2.0
-  built_value: ^6.4.0
-  cached_network_image: ^2.0.0-rc
-  dio: ^2.1.2
-  firebase_analytics: ^2.1.1+3
-  firebase_core: ^0.3.4
-  firebase_crashlytics: ^0.0.4+2
-  flutter_redux: ^0.5.3
-  flutter_widgets: ^0.1.6
+  built_collection: ^4.3.2
+  built_value: ^7.0.9
+  cached_network_image: ^2.0.0
+  dio: ^3.0.9
+#  firebase_analytics: ^5.0.11
+#  firebase_core: ^0.4.4+3
+#  firebase_crashlytics: ^0.1.3+3
+  flutter_redux: ^0.6.0
+  flutter_widgets: ^0.1.12
   jaguar_jwt: ^2.1.6
-  package_info: ^0.4.0+3
-  photo_view: ^0.4.0
-  redux: ^3.0.0
-  redux_thunk: ^0.2.1
-  shared_preferences: ^0.5.2
+  package_info: ^0.4.0+16
+  photo_view: ^0.9.2
+  redux: ^4.0.0
+  redux_thunk: ^0.3.0
+  shared_preferences: ^0.5.6+3
   uni_links: ^0.2.0
-  url_launcher: ^5.0.2
+  url_launcher: ^5.4.2
   validators: ^2.0.0+1
-  video_player: ^0.10.1+3
+  video_player: ^0.10.8+1
+  font_awesome_flutter: ^8.7.0
+  flutter_markdown: ^0.3.4
+  sticky_headers: ^0.1.8+1
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  build_runner: ^1.3.3
-  built_value_generator: ^6.4.0
+  build_runner: ^1.8.0
+  built_value_generator: ^7.0.9
+
+dependency_overrides:
+  path_provider: ^1.6.5
+  sqflite: ^1.3.0
+
 
 flutter:
   uses-material-design: true
